force-app/main/default/objects/Taxation__c/Taxation__c.object-meta.xml
<CustomObject>
    <label>Taxation</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Taxation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taxation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>