force-app/main/default/objects/Taxation__c/fields/business_income_this_tax_year__c.field-meta.xml
<CustomField>
    <fullName>business_income_this_tax_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>business income this tax year</label>
    <type>Checkbox</type>
</CustomField>