force-app/main/default/objects/Taxation__c/fields/Casualty_and_Theft_Loss__c.field-meta.xml
<CustomField>
    <fullName>Casualty_and_Theft_Loss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Casualty and Theft Loss</label>
    <type>Checkbox</type>
</CustomField>