force-app/main/default/objects/Taxation__c/fields/Change_in_Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Visa_Status__c</fullName>
    <description>Was there any change in the Visa Status
during current year? Mention dates</description>
    <label>Change in Visa Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>