force-app/main/default/objects/Taxation__c/fields/child_1__c.field-meta.xml
<CustomField>
    <fullName>child_1__c</fullName>
    <label>child 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>