force-app/main/default/objects/Taxation__c/fields/Child_1_Show__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child 1 Show</label>
    <type>Checkbox</type>
</CustomField>