force-app/main/default/objects/Taxation__c/fields/child_2__c.field-meta.xml
<CustomField>
    <fullName>child_2__c</fullName>
    <label>child 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>