force-app/main/default/objects/Taxation__c/fields/Child_2_Show__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child 2 Show</label>
    <type>Checkbox</type>
</CustomField>