force-app/main/default/objects/Taxation__c/fields/Comments_to_Preparer__c.field-meta.xml
<CustomField>
    <fullName>Comments_to_Preparer__c</fullName>
    <label>Comments to Preparer</label>
    <type>TextArea</type>
</CustomField>