force-app/main/default/objects/Taxation__c/fields/Covered_by_Massachutteus_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Covered_by_Massachutteus_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covered by Massachutteus Insurance</label>
    <type>Checkbox</type>
</CustomField>