force-app/main/default/objects/Taxation__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>