force-app/main/default/objects/Taxation__c/fields/dependents__c.field-meta.xml
<CustomField>
    <fullName>dependents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dependents</label>
    <type>Checkbox</type>
</CustomField>