force-app/main/default/objects/Taxation__c/fields/Doctor_Dental_Orthodontist__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Dental_Orthodontist__c</fullName>
    <label>Doctor/ Dental / Orthodontist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>