force-app/main/default/objects/Taxation__c/fields/Estimated_tax_paid__c.field-meta.xml
<CustomField>
    <fullName>Estimated_tax_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimated tax paid</label>
    <type>Checkbox</type>
</CustomField>