force-app/main/default/objects/Taxation__c/fields/Filed_IOWA_tax_this_year__c.field-meta.xml
<CustomField>
    <fullName>Filed_IOWA_tax_this_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filed IOWA tax this year</label>
    <type>Checkbox</type>
</CustomField>