force-app/main/default/objects/Taxation__c/fields/First_Port_of_Entry_Date_into_US__c.field-meta.xml
<CustomField>
    <fullName>First_Port_of_Entry_Date_into_US__c</fullName>
    <label>First Port of Entry Date into US</label>
    <type>Date</type>
</CustomField>