force-app/main/default/objects/Taxation__c/fields/Foreign_Income_Json__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Income_Json__c</fullName>
    <label>Foreign Income Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>