force-app/main/default/objects/Taxation__c/fields/Glasses_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Glasses_Contacts__c</fullName>
    <label>Glasses / Contacts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>