force-app/main/default/objects/Taxation__c/fields/health_coverage_by_employer__c.field-meta.xml
<CustomField>
    <fullName>health_coverage_by_employer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>health coverage by employer</label>
    <type>Checkbox</type>
</CustomField>