force-app/main/default/objects/Taxation__c/fields/Health_Coverage_by_You__c.field-meta.xml
<CustomField>
    <fullName>Health_Coverage_by_You__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Coverage by You</label>
    <type>Checkbox</type>
</CustomField>