force-app/main/default/objects/Taxation__c/fields/Home_Number__c.field-meta.xml
<CustomField>
    <fullName>Home_Number__c</fullName>
    <label>Home Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>