force-app/main/default/objects/Taxation__c/fields/Hospital_Charges__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Charges__c</fullName>
    <label>Hospital Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>