force-app/main/default/objects/Taxation__c/fields/Interest_You_Paid__c.field-meta.xml
<CustomField>
    <fullName>Interest_You_Paid__c</fullName>
    <label>Interest You Paid</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>