force-app/main/default/objects/Taxation__c/fields/Job_Title_with_Designation__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_with_Designation__c</fullName>
    <label>Job Title with Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>