force-app/main/default/objects/Taxation__c/fields/Marital_Status_as_on_Dec_31__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status_as_on_Dec_31__c</fullName>
    <label>Marital Status as on Dec 31</label>
    <length>255</length>
    <type>Text</type>
</CustomField>