force-app/main/default/objects/Taxation__c/fields/Maternity__c.field-meta.xml
<CustomField>
    <fullName>Maternity__c</fullName>
    <label>Maternity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>