force-app/main/default/objects/Taxation__c/fields/Medical_Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>Medical_Insurance_Premium__c</fullName>
    <label>Medical Insurance Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>