force-app/main/default/objects/Taxation__c/fields/Miles_Medical_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Miles_Medical_Purpose__c</fullName>
    <label>Miles (Medical Purpose)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>