force-app/main/default/objects/Taxation__c/fields/More_than_10000_in_FA_during_tax_year__c.field-meta.xml
<CustomField>
    <fullName>More_than_10000_in_FA_during_tax_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>More than 10000 in FA during tax year</label>
    <type>Checkbox</type>
</CustomField>