force-app/main/default/objects/Taxation__c/fields/more_than_50000_in_FIA_during_tax_year__c.field-meta.xml
<CustomField>
    <fullName>more_than_50000_in_FIA_during_tax_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>more than 50000 in FIA during tax year</label>
    <type>Checkbox</type>
</CustomField>