force-app/main/default/objects/Taxation__c/fields/Name_of_Bank__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Bank__c</fullName>
    <label>Name of Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>