force-app/main/default/objects/Taxation__c/fields/no_of_days_in_current_2_year__c.field-meta.xml
<CustomField>
    <fullName>no_of_days_in_current_2_year__c</fullName>
    <label>no of days in current -2 year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>