force-app/main/default/objects/Taxation__c/fields/No_of_Months_stayed_in_US_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>No_of_Months_stayed_in_US_Current_Year__c</fullName>
    <description>No. of months stayed in US during current year</description>
    <label>No. of months stayed in US Current Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>