force-app/main/default/objects/Taxation__c/fields/Notes_for_tax_prepayerer__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_tax_prepayerer__c</fullName>
    <label>Notes for tax prepayerer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>