force-app/main/default/objects/Taxation__c/fields/Other_Dependent__c.field-meta.xml
<CustomField>
    <fullName>Other_Dependent__c</fullName>
    <label>Other Dependent</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>