force-app/main/default/objects/Taxation__c/fields/Other_Show__c.field-meta.xml
<CustomField>
    <fullName>Other_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Show</label>
    <type>Checkbox</type>
</CustomField>