force-app/main/default/objects/Taxation__c/fields/Personal_Property_Tax_paid_If_any__c.field-meta.xml
<CustomField>
    <fullName>Personal_Property_Tax_paid_If_any__c</fullName>
    <label>Personal Property Tax paid If any</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>