force-app/main/default/objects/Taxation__c/fields/Prescription_Drug__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Drug__c</fullName>
    <label>Prescription Drug</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>