force-app/main/default/objects/Taxation__c/fields/Ready_to_consider__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_consider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to consider</label>
    <type>Checkbox</type>
</CustomField>