force-app/main/default/objects/Taxation__c/fields/Real_Estate_Tax_Secondary_Residency__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Tax_Secondary_Residency__c</fullName>
    <label>Real Estate Tax Secondary Residency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>