force-app/main/default/objects/Taxation__c/fields/Refer_your_friends__c.field-meta.xml
<CustomField>
    <fullName>Refer_your_friends__c</fullName>
    <label>Refer your friends</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>