force-app/main/default/objects/Taxation__c/fields/Rental_Year_for_tax_year__c.field-meta.xml
<CustomField>
    <fullName>Rental_Year_for_tax_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Year for tax year</label>
    <type>Checkbox</type>
</CustomField>