force-app/main/default/objects/Taxation__c/fields/Residency__c.field-meta.xml
<CustomField>
    <fullName>Residency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residency</label>
    <type>Checkbox</type>
</CustomField>