force-app/main/default/objects/Taxation__c/fields/Residency_Current_Year_Minus_1__c.field-meta.xml
<CustomField>
    <fullName>Residency_Current_Year_Minus_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residency Current Year Minus 1</label>
    <type>Checkbox</type>
</CustomField>