force-app/main/default/objects/Taxation__c/fields/SSN_ITIN__c.field-meta.xml
<CustomField>
    <fullName>SSN_ITIN__c</fullName>
    <label>SSN / ITIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>