force-app/main/default/objects/Taxation__c/fields/Stay_more_than_183_days_next_year__c.field-meta.xml
<CustomField>
    <fullName>Stay_more_than_183_days_next_year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will you stay in US for more than 183
Days in next year 2021?</description>
    <label>Stay more than 183 days next year?</label>
    <type>Checkbox</type>
</CustomField>