force-app/main/default/objects/Taxation__c/fields/Taxes_Paid_Last_year_on_State_Tax_Return__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Paid_Last_year_on_State_Tax_Return__c</fullName>
    <label>Taxes Paid Last year on State Tax Return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>