force-app/main/default/objects/Taxation__c/fields/Taxpayer_Alimony_Paid__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_Alimony_Paid__c</fullName>
    <label>Taxpayer Alimony Paid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>