force-app/main/default/objects/Taxation__c/fields/Taxpayer_contribution_towards_HSA__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_contribution_towards_HSA__c</fullName>
    <label>Taxpayer contribution towards HSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>