force-app/main/default/objects/Taxation__c/fields/Taxpayer_Educator_Expense__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_Educator_Expense__c</fullName>
    <label>Taxpayer Educator Expense</label>
    <length>255</length>
    <type>Text</type>
</CustomField>