force-app/main/default/objects/Taxation__c/fields/Taxpayer_higher_ed_tuition_fee__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_higher_ed_tuition_fee__c</fullName>
    <label>Taxpayer higher ed tuition fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>