force-app/main/default/objects/Taxation__c/fields/Taxpayer_Json_current_1_year__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_Json_current_1_year__c</fullName>
    <label>Taxpayer Json current -1 year</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>