force-app/main/default/objects/Taxation__c/fields/Taxpayer_penalty_on_early_withdrawl__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_penalty_on_early_withdrawl__c</fullName>
    <label>Taxpayer penalty on early withdrawl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>