force-app/main/default/objects/Taxation__c/fields/Taxpayer_Receipient_SSN__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_Receipient_SSN__c</fullName>
    <label>Taxpayer Receipient SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>