force-app/main/default/objects/Taxation__c/fields/Taxpayer_Student_loan_interest__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_Student_loan_interest__c</fullName>
    <label>Taxpayer Student loan interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>