force-app/main/default/objects/Taxation__c/fields/Taxpayer_traditional_IRA_contribution__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_traditional_IRA_contribution__c</fullName>
    <label>Taxpayer traditional IRA contribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>