force-app/main/default/objects/Taxation__c/fields/type_of_return_for_current_1_year__c.field-meta.xml
<CustomField>
    <fullName>type_of_return_for_current_1_year__c</fullName>
    <label>type of return for current -1 year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>