force-app/main/default/objects/Taxation__c/fields/US_Bank_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>US_Bank_Routing_Number__c</fullName>
    <label>US Bank Routing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>