force-app/main/default/objects/Taxation__c/fields/Visa_Type_as_on_Dec_31__c.field-meta.xml
<CustomField>
    <fullName>Visa_Type_as_on_Dec_31__c</fullName>
    <label>Visa Type as on Dec 31</label>
    <length>255</length>
    <type>Text</type>
</CustomField>